k8s/spring-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
